--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 .nav-left .logo {
   font-size: 1.12rem;
-  color: #6070FF;
+  color: #6070ff;
   margin-left: 1.5rem;
   margin-top: 0.87rem;
   margin-bottom: 0.87rem;
@@ -46,7 +46,7 @@ body {
   height: 20%;
   font-weight: 43.75rem;
   line-height: 3.25rem;
-  color:#172B4D;
+  color: #172b4d;
 }
 
 .greeting-text p {
@@ -55,7 +55,7 @@ body {
   height: 20%;
   line-height: 1.5rem;
   font-weight: 25rem;
-  color:#344563;
+  color: #344563;
   padding-top: 2%;
 }
 
@@ -70,7 +70,7 @@ body {
   line-height: 1.5rem;
   padding-left: 7%;
   padding-top: 2%;
-  color:#7F8CFF;
+  color: #7f8cff;
 }
 
 .main-container .media-icon {
@@ -80,7 +80,6 @@ body {
 }
 
 @media (min-width: 768px) {
-
   .flex-div {
     height: 30%;
   }
@@ -99,23 +98,22 @@ body {
     padding-left: 15%;
     width: 85%;
   }
-  
+
   .main-container .connect {
     padding-left: 15%;
   }
 
   .main-container .media-icon {
-  height: 1.25rem;
-  padding-left: 15%;
-  padding-top: 2%;
-}
+    height: 1.25rem;
+    padding-left: 15%;
+    padding-top: 2%;
+  }
 
-.greeting-text h2 {
-  font-size: 3rem;
-}
+  .greeting-text h2 {
+    font-size: 3rem;
+  }
 
-.greeting-text p {
-  font-size: 1.25rem;
-}
-
+  .greeting-text p {
+    font-size: 1.25rem;
+  }
 }
