--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@
 body {
   width: 100%;
   height: 100%;
+  background: #e5e5e5;
+}
+
+.mobile-main {
+  background: #fff;
+  border: 1px solid #dfe1e6;
+  border-bottom-left-radius: 3rem;
 }
 
 .flex-div {
@@ -17,6 +24,7 @@ body {
   width: 100%;
   height: 7%;
   box-shadow: 0 0 0.62rem rgba(0, 0, 0, 0.2);
+  background: #fff;
 }
 
 .logo {
@@ -84,8 +92,266 @@ body {
   height: 1.25rem;
   padding-left: 7%;
   padding-top: 2%;
+  margin-bottom: 40%;
   cursor: pointer;
   list-style: none;
+}
+
+.works-container {
+  display: grid;
+  grid-template-rows: auto auto auto auto;
+  row-gap: 6%;
+  padding-top: 30%;
+  padding-right: 6%;
+  padding-left: 6%;
+}
+
+.card-container {
+  width: 100%;
+  background: #fff;
+  border: 1px solid #dfe1e6;
+  border-radius: 4%;
+}
+
+.thumbnail {
+  width: 98%;
+  padding-top: 5%;
+  padding-left: 6%;
+}
+
+.card-container img {
+  width: 95%;
+}
+
+.card-container .card h2 {
+  font-size: 2rem;
+  padding-top: 2%;
+  width: 78.6%;
+  padding-left: 6%;
+}
+
+.info-card {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 13%;
+  padding-left: 2%;
+  padding-top: 3%;
+}
+
+.info-card .canopy {
+  list-style: none;
+  padding-left: 5%;
+  text-decoration-color: #344563;
+  font-size: 1rem;
+}
+
+.info-card .c-text {
+  color: #7a869a;
+}
+
+.card-text {
+  display: flex;
+  justify-content: center;
+  padding-top: 3%;
+  padding-left: 6%;
+  width: 82%;
+}
+
+.card-text p {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  color: #344563;
+  padding-bottom: 3%;
+}
+
+.languages {
+  display: flex;
+  justify-content: space-between;
+  width: 84%;
+  padding-top: 3%;
+  padding-left: 6%;
+  padding-bottom: 3%;
+}
+
+.btn {
+  color: #6070ff;
+  font-size: 1rem;
+  border: 1px solid #ebebff;
+  background: #ebebff;
+  border-radius: 0.5rem;
+  padding: 0.2rem 0.8rem;
+  text-decoration: none;
+}
+
+.project-link {
+  font-size: 1.2rem;
+  padding-left: 6%;
+  padding-top: 10%;
+  padding-bottom: 15%;
+}
+
+.btn2 {
+  color: #396df2;
+  border: 1px solid #396df2;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  padding: 5%;
+}
+
+.about-section {
+  background: #fff;
+  border: 1px solid #dfe1e6;
+  border-top-right-radius: 3rem;
+  margin-top: 35rem;
+}
+
+.about-myself {
+  display: flex;
+  flex-direction: column;
+  padding-top: 30%;
+  padding-left: 7%;
+  padding-right: 7%;
+}
+
+.about-title {
+  font-size: 2.5rem;
+  width: 80%;
+  height: 20%;
+  font-weight: 43.75rem;
+  line-height: 3.25rem;
+  color: #172b4d;
+}
+
+.about-myself p {
+  font-size: 1rem;
+  width: 90%;
+  height: 20%;
+  line-height: 1.5rem;
+  font-weight: 25rem;
+  color: #344563;
+  padding-top: 2%;
+}
+
+.about-section .connect {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  padding-left: 7%;
+  padding-top: 5%;
+  color: #7f8cff;
+}
+
+.about-section .media-icon2 {
+  display: flex;
+  justify-content: space-between;
+  width: 55%;
+  height: 1.25rem;
+  padding-left: 7%;
+  padding-top: 5%;
+  cursor: pointer;
+  list-style: none;
+}
+
+.resume-link {
+  font-size: 1.2rem;
+  padding-left: 6%;
+  padding-top: 15%;
+  padding-bottom: 15%;
+}
+
+.btn3 {
+  color: #396df2;
+  border: 1px solid #396df2;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  padding: 5%;
+}
+
+.bottom-menus {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  row-gap: 6%;
+  padding-top: 5%;
+  padding-right: 6%;
+  padding-left: 6%;
+}
+
+.languages-des {
+  display: flex;
+  justify-content: space-between;
+}
+
+.frameworks-menu {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #dfe1e6;
+}
+
+.skills-menu {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #dfe1e6;
+  margin-bottom: 25%;
+}
+
+.languages-box {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  row-gap: 1rem;
+}
+
+.languages-box .javascript-box {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  border: 1px solid #f7f7f9;
+  border-radius: 0.5rem;
+  background: #f7f7f9;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+  margin-top: 3%;
+}
+
+.languages-box .javascript-box p {
+  font-size: 1rem;
+  padding-left: 1rem;
+  color: #253858;
+}
+
+.languages-box .html-box {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  border: 1px solid #f7f7f9;
+  border-radius: 0.5rem;
+  background: #f7f7f9;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+}
+
+.languages-box .html-box p {
+  font-size: 1rem;
+  padding-left: 1rem;
+  color: #253858;
+}
+
+.languages-box .css-box {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  border: 1px solid #f7f7f9;
+  border-radius: 0.5rem;
+  background: #f7f7f9;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.75rem;
+}
+
+.languages-box .css-box p {
+  font-size: 1rem;
+  padding-left: 1rem;
+  color: #253858;
 }
 
 @media (min-width: 768px) {
@@ -120,10 +386,88 @@ body {
   }
 
   .greeting-text h1 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 
   .greeting-text p {
-    font-size: 1.25rem;
+    font-size: 1rem;
+  }
+
+  .card-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .card-container .card h2 {
+    padding-top: 15%;
+  }
+
+  .about-section {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .cont-about {
+    width: 45%;
+  }
+
+  .about-myself {
+    padding-top: 15%;
+    padding-left: 10%;
+    width: 100%;
+  }
+
+  .about-myself h1 {
+    width: 100%;
+    font-size: 1.87rem;
+  }
+
+  .about-myself p {
+    font-size: 1rem;
+    width: 100%;
+    padding-right: 0;
+  }
+
+  .bottom-menus {
+    width: 60%;
+  }
+
+  .languages-box {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    row-gap: 1rem;
+    column-gap: 10%;
+    padding-top: 10%;
+  }
+
+  .languages-box .javascript-box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .languages-box .html-box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .languages-box .css-box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .about-section .connect {
+    padding-left: 10%;
+  }
+
+  .about-section .media-icon2 {
+    padding-left: 10%;
+  }
+
+  .resume-link {
+    font-size: 1rem;
+    padding-left: 10%;
   }
 }
