--- a/style.css
+++ b/style.css
@@ -360,8 +360,62 @@ body {
   background-color: #6070ff;
   background-image: url(src/img/contact\ form\ shapes-mobile@2x.png);
   background-repeat: no-repeat;
-  background-size: 100%;
-  border-top-right-radius: 3rem;
+  background-size: 55%;
+  background-position-x: right;
+  background-position-y: -25%;
+  border-top-left-radius: 4rem;
+  padding-left: 9%;
+  padding-right: 9%;
+  color: #fff;
+  align-items: center;
+  text-align: center;
+}
+
+.contact-title {
+  padding-top: 35%;
+  font-size: 2rem;
+  justify-content: center;
+}
+
+.contact-text {
+  margin-top: 5%;
+  width: 20rem;
+  font-size: 1.25rem;
+  justify-content: center;
+  text-align: center;
+  line-height: 1.75rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  padding-top: 10%;
+}
+
+form ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.input-box input {
+  width: 100%;
+  height: 2.5rem;
+  border: 1px solid #cfd8bc;
+  border-radius: 0.5rem;
+  margin-bottom: 5%;
+  text-align: left;
+  padding: 3%;
+}
+
+.input-box textarea {
+  width: 100%;
+  height: 8.5rem;
+  border: 1px solid #cfd8bc;
+  border-radius: 0.5rem;
+  margin-bottom: 4%;
+  text-align: left;
+  padding: 3%;
 }
 
 @media (min-width: 768px) {
