--- a/style.css
+++ b/style.css
@@ -360,8 +360,82 @@ body {
   background-color: #6070ff;
   background-image: url(src/img/contact\ form\ shapes-mobile@2x.png);
   background-repeat: no-repeat;
-  background-size: 100%;
-  border-top-right-radius: 3rem;
+  background-size: 55%;
+  background-position-x: right;
+  background-position-y: -25%;
+  border-top-left-radius: 4rem;
+  padding-left: 9%;
+  padding-right: 9%;
+  color: #ffffff;
+  align-items: center;
+  text-align: center;
+}
+
+.contact-title {
+  padding-top: 35%;
+  font-size: 2rem;
+  justify-content: center;
+}
+
+.contact-text {
+  margin-top: 5%;
+  width: 20rem;
+  font-size: 1.25rem;
+  justify-content: center;
+  text-align: center;
+  line-height: 1.75rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  padding-top: 10%;
+}
+
+form ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.input-box input{
+  width: 100%;
+  height: 2.5rem;
+  border: 1px solid #cfd8dc;
+  border-radius: 0.5rem;
+  margin-bottom: 5%;
+  text-align: left;
+  padding: 3%;
+}
+
+.input-box textarea{
+  width: 100%;
+  height: 8.5rem;
+  border: 1px solid #cfd8dc;
+  border-radius: 0.5rem;
+  margin-bottom: 4%;
+  text-align: left;
+  padding: 3%;
+}
+
+button {
+  background-color: #ffffff;
+  padding: 3.2%;
+  font-weight: 700;
+  font-size: 17px;
+  color: #6070ff;
+  border: 1px solid #cfd8dc;
+  border-radius: 0.5rem;
+  margin-top: 3%;
+  margin-bottom: 25%;
+  margin-right: 11rem;
+  cursor: pointer;
+  
+}
+
+.button button{
+  align-items: left;
+  justify-content: left;
 }
 
 @media (min-width: 768px) {
@@ -480,72 +554,4 @@ body {
     font-size: 1rem;
     padding-left: 10%;
   }
-}
-
-/* form section */
-
-form {
-  /* Center the form on the page */
-  margin: 0 auto;
-  width: 400px;
-  /* Form outline */
-  padding: 1em;
-  border: 1px solid #ccc;
-  border-radius: 1em;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-form li + li {
-  margin-top: 1em;
-}
-
-label {
-  /* Uniform size & alignment */
-  display: inline-block;
-  width: 90px;
-  text-align: right;
-}
-
-input,
-textarea {
-  /* To make sure that all text fields have the same font settings
-     By default, textareas have a monospace font */
-  font: 1em sans-serif;
-
-  /* Uniform text field size */
-  width: 300px;
-  box-sizing: border-box;
-
-  /* Match form field borders */
-  border: 1px solid #999;
-}
-
-input:focus,
-textarea:focus {
-  /* Additional highlight for focused elements */
-  border-color: #000;
-}
-
-textarea {
-  /* Align multiline text fields with their labels */
-  vertical-align: top;
-
-  /* Provide space to type some text */
-  height: 5em;
-}
-
-.button {
-  /* Align buttons with the text fields */
-  padding-left: 90px; /* same size as the label elements */
-}
-
-button {
-  /* This extra margin represent roughly the same space as the space
-     between the labels and their text fields */
-  margin-left: 0.5em;
 }
