--- a/style.css
+++ b/style.css
@@ -1,148 +1,143 @@
-* {
+body{
+  background: #E5E5E5;
+  overflow-x: hidden;
+  font-family: 'Poppins', sans-serif;
+}
+
+body,p,a,ul,li{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: sans-serif, 'poppins';
-  font-size: 100%;
+  text-decoration: none;
 }
 
-body {
-  width: 100%;
-  height: 100%;
-  background: #e5e5e5;
+p,a,li{
+  color: #344563;
+  line-height: 1.4em;
+
+}
+h1 {
+  font-size: 2.5em;
+  color: #172B4D
+}
+h2{
+  font-size: 1.6em;
 }
 
-.mobile-main {
-  background: #fff;
-  border: 1px solid #dfe1e6;
-  border-bottom-left-radius: 3rem;
+h3 {
+
+}
+
+h4{
+  font-size: 1.1em;
+}
+
+/*mobile style*/
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+}
+
+.flex-div ul{
+  display: none;
 }
 
 .flex-div {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 7%;
+  height: 3em;
   box-shadow: 0 0 0.62rem rgba(0, 0, 0, 0.2);
   background: #fff;
 }
 
 .logo {
-  font-size: 1.12rem;
+  font-size: 1.12em;
   color: #6070ff;
-  margin-left: 1.5rem;
-  margin-top: 0.87rem;
-  margin-bottom: 0.87rem;
+  grid-column: 1/4;
+  margin: 0.8em 1.5em;
 }
 
 .nav-right img {
-  padding-top: 1.18rem;
-  padding-right: 2.25rem;
+  grid-column: 6/9;
+  margin: 1.1em 2.25em;
+  cursor: pointer;
 }
 
 .main-container {
   display: flex;
+  background: #fff;
+  grid-column: 1/9;
   flex-direction: column;
   width: 100%;
-  height: 100%;
   background-image: url(src/img/header-shapes\ mobile.png);
   background-repeat: no-repeat;
   background-size: 100%;
+  border: 1px solid #dfe1e6;
+  border-bottom-left-radius: 4em;
 }
 
 .greeting-text h1 {
-  font-size: 2.5rem;
-  width: 80%;
-  height: 20%;
-  font-weight: 43.75rem;
-  line-height: 3.25rem;
-  color: #172b4d;
+  margin: 2.5em 0.6em 0 0.6em;
 }
 
 .greeting-text p {
   font-size: 1rem;
-  width: 90%;
-  height: 20%;
   line-height: 1.5rem;
   font-weight: 25rem;
-  color: #344563;
-  padding-top: 2%;
+  margin: 0.6em 2.5em 0 1.5em;
 }
 
-.main-container .greeting-text {
-  display: flex;
-  flex-direction: column;
-  padding-top: 30%;
-  padding-left: 7%;
-  padding-right: 7%;
-}
-
-.main-container .connect {
+.connect p {
   font-size: 1rem;
   line-height: 1.5rem;
-  padding-left: 7%;
-  padding-top: 2%;
+  margin: 0.6em 2.5em 0 1.5em;
   color: #7f8cff;
 }
 
-.main-container .media-icon {
+.media-icon {
   display: flex;
   justify-content: space-between;
-  width: 55%;
   height: 1.25rem;
-  padding-left: 7%;
-  padding-top: 2%;
-  margin-bottom: 40%;
+  margin: 0.6em 9em 8em 1.5em;
   cursor: pointer;
   list-style: none;
 }
 
 .works-container {
-  display: grid;
-  grid-template-rows: auto auto auto auto;
-  row-gap: 6%;
-  padding-top: 30%;
-  padding-right: 6%;
-  padding-left: 6%;
+  margin: 5em 2em ;
+  row-gap: 10em;
+  display: flex;
+  flex-direction: column;
+  grid-column: 2/8;
 }
 
 .card-container {
-  width: 100%;
   background: #fff;
   border: 1px solid #dfe1e6;
   border-radius: 4%;
 }
 
-.thumbnail {
-  width: 98%;
-  padding-top: 5%;
-  padding-left: 6%;
-}
-
 .card-container img {
-  width: 95%;
+  width: 90%;
+  margin: 0.8em;
 }
 
 .card-container .card h2 {
-  font-size: 2rem;
-  padding-top: 2%;
-  width: 78.6%;
-  padding-left: 6%;
+  margin: 0.2em 0.8em 0 0.4em;
+  font-size: 2em;
 }
 
 .info-card {
   display: flex;
   justify-content: space-between;
-  padding-right: 13%;
-  padding-left: 2%;
-  padding-top: 3%;
+  font-size: 0.7em;
+  margin: 0 5em 0 1.5em;
 }
 
 .info-card .canopy {
   list-style: none;
-  padding-left: 5%;
-  text-decoration-color: #344563;
-  font-size: 1rem;
+  padding-top: 0.35em;
 }
 
 .info-card .c-text {
@@ -152,31 +147,19 @@ body {
 .card-text {
   display: flex;
   justify-content: center;
-  padding-top: 3%;
-  padding-left: 6%;
-  width: 82%;
-}
-
-.card-text p {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  color: #344563;
-  padding-bottom: 3%;
+  margin: 0 1.5em 0 1em;
 }
 
 .languages {
+  list-style: none;
   display: flex;
   justify-content: space-between;
-  width: 84%;
-  padding-top: 3%;
-  padding-left: 6%;
-  padding-bottom: 3%;
-  list-style: none;
+  margin: 1em 3.5em 0 0.8em;
 }
 
 .btn {
   color: #6070ff;
-  font-size: 1rem;
+  font-size: 0.75em;
   border: 1px solid #ebebff;
   background: #ebebff;
   border-radius: 0.5rem;
@@ -186,9 +169,8 @@ body {
 
 .project-link {
   font-size: 1.2rem;
-  padding-left: 6%;
-  padding-top: 10%;
-  padding-bottom: 15%;
+  padding: 0.1em;
+  margin: 2em 0.6em;
 }
 
 .btn2 {
@@ -196,67 +178,43 @@ body {
   border: 1px solid #396df2;
   border-radius: 0.5rem;
   text-decoration: none;
-  padding: 5%;
+  padding: 0.5em;
 }
 
 .about-section {
-  background: #fff;
-  border: 1px solid #dfe1e6;
-  border-top-right-radius: 3rem;
-  margin-top: 35rem;
-}
-
-.about-myself {
   display: flex;
+  background: #fff;
+  grid-column: 1/9;
   flex-direction: column;
-  padding-top: 30%;
-  padding-left: 7%;
-  padding-right: 7%;
+  border: 1px solid #dfe1e6;
+  border-top-right-radius: 4em;
 }
 
 .about-title {
-  font-size: 2.5rem;
-  width: 80%;
-  height: 20%;
-  font-weight: 43.75rem;
-  line-height: 3.25rem;
-  color: #172b4d;
+  margin: 2.5em 0.6em 0 0.6em;
+  font-size: 2.5em;
 }
 
 .about-myself p {
   font-size: 1rem;
-  width: 90%;
-  height: 20%;
   line-height: 1.5rem;
   font-weight: 25rem;
-  color: #344563;
-  padding-top: 2%;
+  margin: 0.6em 2.5em 0 1.5em;
 }
 
-.about-section .connect {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  padding-left: 7%;
-  padding-top: 5%;
-  color: #7f8cff;
-}
-
-.about-section .media-icon2 {
+.media-icon2 {
   display: flex;
   justify-content: space-between;
-  width: 55%;
   height: 1.25rem;
-  padding-left: 7%;
-  padding-top: 5%;
+  margin: 0.6em 8em 0em 1.5em;
   cursor: pointer;
   list-style: none;
 }
 
 .resume-link {
   font-size: 1.2rem;
-  padding-left: 6%;
-  padding-top: 15%;
-  padding-bottom: 15%;
+  padding: 0.1em;
+  margin: 2em 0.6em;
 }
 
 .btn3 {
@@ -264,41 +222,30 @@ body {
   border: 1px solid #396df2;
   border-radius: 0.5rem;
   text-decoration: none;
-  padding: 5%;
+  padding: 0.5em;
 }
 
 .bottom-menus {
-  display: grid;
-  grid-template-rows: auto auto auto;
-  row-gap: 6%;
-  padding-top: 5%;
-  padding-right: 6%;
-  padding-left: 6%;
-  list-style: none;
+  display: flex;
+  grid-column: 1/9;
+  flex-direction: column;
 }
 
 .languages-des {
   display: flex;
   justify-content: space-between;
+  margin: 0.6em 2.5em 0 1.5em;
+  align-items: center;
 }
 
-.frameworks-menu {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #dfe1e6;
-}
-
-.skills-menu {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #dfe1e6;
-  margin-bottom: 25%;
+.languages-des img{
+  height: 5%;
 }
 
 .languages-box {
-  display: grid;
-  grid-template-rows: auto auto auto;
-  row-gap: 1rem;
+  display: flex;
+  grid-column: 1/9;
+  flex-direction: column;
 }
 
 .languages-box .javascript-box {
@@ -308,15 +255,13 @@ body {
   border: 1px solid #f7f7f9;
   border-radius: 0.5rem;
   background: #f7f7f9;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.75rem;
-  margin-top: 3%;
+  margin: 0.6em 2.5em 0 1.5em;
+  padding: 0.5em;
 }
 
 .languages-box .javascript-box p {
-  font-size: 1rem;
-  padding-left: 1rem;
+  font-size: 1em;
+  padding-left: 1em;
   color: #253858;
 }
 
@@ -327,14 +272,13 @@ body {
   border: 1px solid #f7f7f9;
   border-radius: 0.5rem;
   background: #f7f7f9;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.75rem;
+  margin: 0.6em 2.5em 0 1.5em;
+  padding: 0.5em;
 }
 
 .languages-box .html-box p {
-  font-size: 1rem;
-  padding-left: 1rem;
+  font-size: 1em;
+  padding-left: 1em;
   color: #253858;
 }
 
@@ -345,212 +289,50 @@ body {
   border: 1px solid #f7f7f9;
   border-radius: 0.5rem;
   background: #f7f7f9;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 0.75rem;
+  margin: 0.6em 2.5em 0 1.5em;
+  padding: 0.5em;
 }
 
 .languages-box .css-box p {
-  font-size: 1rem;
-  padding-left: 1rem;
+  font-size: 1em;
+  padding-left: 1em;
   color: #253858;
 }
 
+.frameworks-menu {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.6em 2.5em 0 1.5em;
+  align-items: center;
+}
+
+.skills-menu {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.6em 2.5em 0 1.5em;
+  align-items: center;
+}
+
 .contact-section {
-  background-color: #6070ff;
+  background: #6070FF;
   background-image: url(src/img/contact\ form\ shapes-mobile@2x.png);
   background-repeat: no-repeat;
   background-size: 55%;
   background-position-x: right;
   background-position-y: -25%;
   border-top-left-radius: 4rem;
-  padding-left: 9%;
-  padding-right: 9%;
-  color: #fff;
-  align-items: center;
-  text-align: center;
 }
 
-.contact-title {
-  padding-top: 35%;
-  font-size: 2rem;
-  justify-content: center;
-}
-
-.contact-text {
-  margin-top: 5%;
-  width: 20rem;
-  font-size: 1.25rem;
-  justify-content: center;
-  text-align: center;
-  line-height: 1.75rem;
-}
-
-form {
+.contact-text-section {
   display: flex;
+  grid-column: 1/9;
   flex-direction: column;
-  padding-top: 10%;
+  border: 1px solid #dfe1e6;
+  border-top-right-radius: 4em;
 }
 
-form ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.input-box input {
-  width: 100%;
-  height: 2.5rem;
-  border: 1px solid #cfd8dc;
-  border-radius: 0.5rem;
-  margin-bottom: 5%;
-  text-align: left;
-  padding: 3%;
-}
-
-.input-box textarea {
-  width: 100%;
-  height: 8.5rem;
-  border: 1px solid #cfd8dc;
-  border-radius: 0.5rem;
-  margin-bottom: 4%;
-  text-align: left;
-  padding: 3%;
-}
-
-button {
-  background-color: #fff;
-  padding: 3.2%;
-  font-weight: 700;
-  font-size: 17px;
-  color: #6070ff;
-  border: 1px solid #cfd8dc;
-  border-radius: 0.5rem;
-  margin-top: 3%;
-  margin-bottom: 25%;
-  margin-right: 11rem;
-  cursor: pointer;
-}
-
-.button button {
-  align-items: left;
-  justify-content: left;
-}
-
-@media (min-width: 768px) {
-  .flex-div {
-    height: 30%;
-  }
-
-  .main-container {
-    width: 100%;
-    height: 100%;
-    background-image: url(src/img/Header\ bg@2x.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: 0 3rem;
-  }
-
-  .main-container .greeting-text {
-    padding-top: 18%;
-    padding-left: 15%;
-    width: 85%;
-  }
-
-  .main-container .connect {
-    padding-left: 15%;
-  }
-
-  .main-container .media-icon {
-    width: 40%;
-    height: 1.25rem;
-    padding-left: 15%;
-    padding-top: 2%;
-  }
-
-  .greeting-text h1 {
-    font-size: 2rem;
-  }
-
-  .greeting-text p {
-    font-size: 1rem;
-  }
-
-  .card-container {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .card-container .card h2 {
-    padding-top: 15%;
-  }
-
-  .about-section {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .cont-about {
-    width: 45%;
-  }
-
-  .about-myself {
-    padding-top: 15%;
-    padding-left: 10%;
-    width: 100%;
-  }
-
-  .about-myself h1 {
-    width: 100%;
-    font-size: 1.87rem;
-  }
-
-  .about-myself p {
-    font-size: 1rem;
-    width: 100%;
-    padding-right: 0;
-  }
-
-  .bottom-menus {
-    width: 60%;
-  }
-
-  .languages-box {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    row-gap: 1rem;
-    column-gap: 10%;
-    padding-top: 10%;
-  }
-
-  .languages-box .javascript-box {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .languages-box .html-box {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .languages-box .css-box {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .about-section .connect {
-    padding-left: 10%;
-  }
-
-  .about-section .media-icon2 {
-    padding-left: 10%;
-  }
-
-  .resume-link {
-    font-size: 1rem;
-    padding-left: 10%;
-  }
+.contact-title h4{
+  margin: 2.5em 0.6em 0 0.6em;
+  font-size: 2.5em;
+  color: #fff;
 }
