--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h4 {
 
 .logo {
   font-size: 1.12em;
-  color: #6070ff;
+  color: #1451a0; 
   margin: 0.8em 2em;
   grid-column: 1/5;
   width: 100%;
@@ -116,7 +116,7 @@ h4 {
   font-size: 1rem;
   line-height: 1.5rem;
   margin: 0.8em 2.5em;
-  color: #7f8cff;
+  color: #1451a0; 
 }
 
 .media-icon {
@@ -175,7 +175,7 @@ h4 {
 }
 
 .info-card .c-text {
-  color: #7a869a;
+  color: #9c9fa2;
 }
 
 .card-text {
@@ -200,7 +200,7 @@ h4 {
 }
 
 .btn {
-  color: #6070ff;
+  color: #1451a0; 
   font-size: 0.75em;
   border: 1px solid #ebebff;
   background: #ebebff;
@@ -216,8 +216,8 @@ h4 {
 }
 
 .btn2 {
-  color: #396df2;
-  border: 1px solid #396df2;
+  color: #1451a0; 
+  border: 1px solid #1451a0; 
   border-radius: 0.5rem;
   text-decoration: none;
   padding: 0.5em;
@@ -257,7 +257,7 @@ h4 {
   font-size: 1rem;
   line-height: 1.5rem;
   margin: 0.8em 1.5em;
-  color: #7f8cff;
+  color:#1451a0;
 }
 
 .media-icon2 {
@@ -277,8 +277,8 @@ h4 {
 }
 
 .btn3 {
-  color: #396df2;
-  border: 1px solid #396df2;
+  color: #1451a0; 
+  border: 1px solid #1451a0;
   border-radius: 0.5rem;
   text-decoration: none;
   padding: 0.5em;
@@ -396,6 +396,10 @@ h4 {
   border-top-left-radius: 4rem;
 }
 
+.contact-section p {
+  color: #fff; 
+}
+
 .contact-text-section {
   display: flex;
   grid-column: 1/9;
@@ -444,7 +448,7 @@ button {
   padding: 3%;
   font-weight: 700;
   font-size: 1.06em;
-  color: #6070ff;
+  color: #1451a0; 
   border: 1px solid #cfd8dc;
   border-radius: 0.5rem;
   cursor: pointer;
@@ -596,7 +600,6 @@ button {
     font-size: 1rem;
     line-height: 1.5rem;
     margin: 2% 5%;
-    color: #7f8cff;
   }
 
   .media-icon2 {
