--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ button {
 .flex-div {
   display: flex;
   justify-content: space-between;
+  position: fixed;
   width: 100%;
   height: 3em;
   box-shadow: 0 0 0.62rem rgba(0, 0, 0, 0.2);
